--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-click==7.1.1
-cycler==0.10.0
-Flask==1.1.1
-gunicorn==20.0.4
-imutils==0.5.3
-itsdangerous==1.1.0
-Jinja2==2.11.1
-kiwisolver==1.1.0
-MarkupSafe==1.1.1
-matplotlib==3.2.1
-numpy==1.18.2
-opencv-python==4.5.5.62
-pyparsing==2.4.6
-python-dateutil==2.8.1
-six==1.14.0
-Werkzeug==1.0.0
+click
+cycler
+Flask
+gunicorn
+imutils
+itsdangerous
+Jinja2
+kiwisolver
+MarkupSafe
+matplotlib
+numpy
+opencv-python
+pyparsing
+python-dateutil
+six
+Werkzeug
